// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Passion_Project.Data;

#nullable disable

namespace Passion_Project.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20250201090748_kCardMiration")]
    partial class kCardMiration
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 64);

            MySqlModelBuilderExtensions.AutoIncrementColumns(modelBuilder);

            modelBuilder.Entity("Passion_Project.Models.Card", b =>
                {
                    b.Property<int>("ID")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("ID"));

                    b.Property<int?>("DeckID")
                        .HasColumnType("int");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .HasColumnType("longtext");

                    b.HasKey("ID");

                    b.HasIndex("DeckID");

                    b.ToTable("Cards");
                });

            modelBuilder.Entity("Passion_Project.Models.CardDeck", b =>
                {
                    b.Property<int>("DeckID")
                        .HasColumnType("int");

                    b.Property<int>("CardID")
                        .HasColumnType("int");

                    b.HasKey("DeckID", "CardID");

                    b.HasIndex("CardID");

                    b.HasIndex("DeckID", "CardID")
                        .IsUnique();

                    b.ToTable("CardDecks");
                });

            modelBuilder.Entity("Passion_Project.Models.Deck", b =>
                {
                    b.Property<int>("ID")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("ID"));

                    b.Property<string>("Description")
                        .HasColumnType("longtext");

                    b.Property<string>("Name")
                        .HasColumnType("longtext");

                    b.Property<int>("PlayerID")
                        .HasColumnType("int");

                    b.HasKey("ID");

                    b.HasIndex("PlayerID");

                    b.ToTable("Decks");
                });

            modelBuilder.Entity("Passion_Project.Models.Player", b =>
                {
                    b.Property<int>("ID")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("ID"));

                    b.Property<string>("Email")
                        .HasColumnType("longtext");

                    b.Property<string>("Name")
                        .HasColumnType("longtext");

                    b.HasKey("ID");

                    b.ToTable("Players");
                });

            modelBuilder.Entity("Passion_Project.Models.Card", b =>
                {
                    b.HasOne("Passion_Project.Models.Deck", null)
                        .WithMany("Cards")
                        .HasForeignKey("DeckID");
                });

            modelBuilder.Entity("Passion_Project.Models.CardDeck", b =>
                {
                    b.HasOne("Passion_Project.Models.Card", "Card")
                        .WithMany("CardDecks")
                        .HasForeignKey("CardID")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Passion_Project.Models.Deck", "Deck")
                        .WithMany("CardDecks")
                        .HasForeignKey("DeckID")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Card");

                    b.Navigation("Deck");
                });

            modelBuilder.Entity("Passion_Project.Models.Deck", b =>
                {
                    b.HasOne("Passion_Project.Models.Player", "CurrentPlayer")
                        .WithMany("Decks")
                        .HasForeignKey("PlayerID")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CurrentPlayer");
                });

            modelBuilder.Entity("Passion_Project.Models.Card", b =>
                {
                    b.Navigation("CardDecks");
                });

            modelBuilder.Entity("Passion_Project.Models.Deck", b =>
                {
                    b.Navigation("CardDecks");

                    b.Navigation("Cards");
                });

            modelBuilder.Entity("Passion_Project.Models.Player", b =>
                {
                    b.Navigation("Decks");
                });
#pragma warning restore 612, 618
        }
    }
}
